# rust-store

./: .dockerignore  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2026-03-23-071418_create_products_table/: up.sql
src/: main.rs
src/application/usecases/: products.rs
src/config/: config_loader.rs  config_model.rs  stage.rs
src/domain/entities/: products.rs
src/domain/repositories/: products.rs
src/domain/value_objects/: product_model.rs
src/infrastructure/axum_http/: http_serve.rs
src/infrastructure/axum_http/routers/: products.rs
src/infrastructure/postgres/: connection.rs  cursor.rs  mod.rs  products.rs  schema.rs
src/infrastructure/postgres/migrations/2026-03-25-063310_seed_products_table/: down.sql  up.sql
