[package]
name = "rust-store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2.3.7", features = ["postgres", "serde_json", "chrono", "r2d2"] }
dotenvy = "0.15.7"
mockall = "0.14.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
